--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/razzdrawon/TrainingJavascript#readme",
   "devDependencies": {
     "eslint": "^5.4.0",
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
   }
