--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
+    "body-parser": "^1.18.3",
     "css-loader": "^1.0.0",
     "eslint": "^5.4.0",
+    "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.22.1",
     "webpack": "^4.16.5",
