--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jasmine",
-    "build": "eslint ./labs/src/intro/ --ext .js && webpack"
+    "build": "eslint ./labs/src/intro/ --ext .js && webpack",
+    "server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "eslint": "^5.4.0",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.18.3",
     "style-loader": "^0.22.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
