--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "jasmine",
     "build": "eslint ./labs/src/intro/ --ext .js && webpack",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "build-dev": "eslint ./labs/src/intro/ --ext .js && webpack --watch",
+    "dev": "concurrently --kill-others 'npm run build-dev' 'npm run server'"
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,7 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "body-parser": "^1.18.3",
+    "concurrently": "^3.6.1",
     "css-loader": "^1.0.0",
     "eslint": "^5.4.0",
     "express": "^4.16.3",
