--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "jasmine",
-    "build": "eslint ./labs/src/intro/ --ext .js && webpack",
+    "build": "eslint ./labs/src/intro/ --ext .js && npm run dev-test && webpack",
     "server": "nodemon server.js",
     "build-dev": "eslint ./labs/src/intro/ --ext .js && webpack --watch",
-    "dev": "concurrently --kill-others 'npm run build-dev' 'npm run server'"
+    "dev": "concurrently --kill-others 'npm run build-dev' 'npm run server'",
+    "dev-test": "babel-node spec/runSpecs",
+    "ui-test": "karma start --singleRun"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,7 @@
   },
   "homepage": "https://github.com/razzdrawon/TrainingJavascript#readme",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
@@ -36,6 +39,13 @@
     "eslint": "^5.4.0",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
+    "jasmine": "^3.2.0",
+    "karma": "^3.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.2",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-safari-launcher": "^1.0.0",
+    "karma-webpack": "^3.0.0",
     "nodemon": "^1.18.3",
     "style-loader": "^0.22.1",
     "webpack": "^4.16.5",
